헤더 반응형 수정

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ html {
 
 
 body {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Noto Sans KR','Roboto', sans-serif;
   font-weight: 400;
   font-size: 14px;
   letter-spacing: -0.4px;
@@ -42,6 +42,7 @@ body {
   position: fixed;
   left: 0;
   top: 0;
+  display: none;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
@@ -235,7 +236,7 @@ body {
 }
 @media all and (max-width:1000px){
   .more-menu {
-    height: 9vw;
+    height: 90px;
   }
 
   .more-logo {
@@ -298,6 +299,16 @@ body {
     font-size: 3vw;
   }
 }
+@media all and (max-width:600px){
+  .more-menu-close{
+    background-size: 4.1vw;
+  }
+}
+@media all and (max-width:400px){
+  .more-menu-close{
+    background-size: 5.1vw;
+  }
+}
 
 
 /* 상단영역 */
@@ -310,10 +321,10 @@ body {
   z-index: 9999;
 }
 
-/* .change {
-  display: none;
-  background-color: #fff;
-} */
+.header-ch{
+  background: #fff;
+}
+
 
 .header .inner {
   display: block;
@@ -368,7 +379,9 @@ body {
   margin-right: 70px;
   font-weight: 700;
 }
-
+.gnb-name-ch{
+  color: #000;
+}
 .menu>li>a:hover {
   color: #009ECC;
 }
@@ -473,7 +486,9 @@ body {
   font-size: 12px;
   float: left;
 }
-
+.header-btn-left-ch{
+  border-right: 1px solid #000;
+}
 .lang-box {
   position: relative;
   display: block;
@@ -484,7 +499,10 @@ body {
   font-weight: bold;
   color: #fff;
 }
-
+.lang-box-ch{
+  border: 1px solid #000;
+  color: #000;
+}
 .lang-box::after {
   content: '';
   position: absolute;
@@ -496,11 +514,11 @@ body {
   background: url('../images/lang_arrow.png') no-repeat center;
 }
 
-.lang-box-black::after {
+.lang-box-ch::after {
   background: url('../images/lang_arrow_sticky.png') no-repeat center;
 }
 
-.lang-box-black-click::after {
+.lang-box-ch-click::after {
   background: url('../images/lang_arrow_sticky.png') no-repeat center;
   transform: rotate(180deg);
 }
@@ -520,7 +538,9 @@ body {
   border: 1px solid #fff;
   text-align: left;
 }
-
+.lang-box-list-ch{
+  border: 1px solid #000;
+}
 .lang-box-list>li {
   position: relative;
   display: block;
@@ -538,7 +558,9 @@ body {
   color: #fff;
   margin-left: 9px;
 }
-
+.lang-box-lang-ch{
+  color: #000;
+}
 .lang-box-lang-open {
   color: #000;
 }
@@ -577,7 +599,9 @@ body {
   height: 3px;
   background-color: #fff;
 }
-
+.hb-bt-line-ch{
+  background: #000;
+}
 .hb-bt::after {
   content: '';
   position: absolute;
@@ -663,7 +687,7 @@ body {
     height: 50%;
     line-height: 20px;
     margin-top: 20px;
-    padding-right: 30px;
+    padding-right: 3vw;
     border-right: 1px solid #000;
     font-size: 2vw;
   }
@@ -674,8 +698,9 @@ body {
     width: 60px;
 
     background-color: transparent;
-    padding: 5px 10px;
-    font-weight: bold;
+    padding: 5px 0;
+    padding-left: 1.03vw;
+    font-weight: 500;
     color: #000;
   }
 
@@ -685,9 +710,7 @@ body {
     top: 10px;
     right: -20px;
     display: block;
-
     width: 1.9vw;
-
     height: 1.15vw;
     background: url('../images/lang_arrow_b.png') no-repeat center;
     background-size: cover;
@@ -703,7 +726,7 @@ body {
     border: 1px solid #ddd;
     font-size: 2vw;
   }
-
+  
   .lang-box-list>li {
     padding: 0.5vw 1vw;
   }
@@ -715,7 +738,36 @@ body {
   }
 
 }
-
+@media all and (max-width:900px){
+  .lang-box{
+    padding-left: 2.03vw;
+  }
+}
+@media all and (max-width:800px){
+  .lang-box{
+    padding-left: 3.03vw;
+    font-size: 2.25vw;
+  }
+}
+@media all and (max-width:530px){
+  .header-btn{
+    width: 40vw;
+  }
+}
+@media all and (max-width:484px){
+  .logo{
+    width: 65vw;
+  }
+  .header-btn{
+    width: 35vw;
+  }
+  .lang-box::after{
+    right: 2vw;
+  }
+  .hb-bt{
+    width: 7vw;
+  }
+}
 /* 비주얼 */
 .visual {
   position: relative;
@@ -786,6 +838,7 @@ body {
     font-size: 0;
     border: 0;
     cursor: pointer;
+    display: none;
   }
 
   .video-btn::after {
@@ -1329,7 +1382,7 @@ body {
 
   .sw-news a {
     width: 100%;
-    height: 450px;
+    height: 35vw;
   }
 
   .news .swiper-slide p {
@@ -1374,8 +1427,28 @@ body {
   left: 70px;
   display: block;
   width: 350px;
+  animation: invesboxright 1.5s ease-in-out;
 }
-
+@keyframes invesboxright {
+	0% {
+		transform: translateX(-150%) translateY(-50%);
+	}
+	50%{
+		transform: translateX(8%) translateY(-50%);
+	}
+	65%{
+		transform: translateX(-4%) translateY(-50%);
+	}
+	80%{
+		transform: translateX(4%) translateY(-50%);
+	}
+	95%{
+		transform: translateX(-2%) translateY(-50%);
+	}			
+	100% {
+		transform: translateX(0%) translateY(-50%)  ;
+	}	
+}
 .inves .inner h2 {
   font-weight: 700;
   font-size: 48px;
@@ -1430,21 +1503,28 @@ body {
   transform: translateY(-50%);
   right: 180px;
   display: block;
-  animation: slide 1s ease-in;
+  animation: newproductleft 1.5s ease-in-out;
 }
-
-@keyframes slide {
-  from {
-    margin-right: -100px;
-    opacity: 0;
-  }
-
-  to {
-    margin-right: 0px;
-    opacity: 1;
-  }
+@keyframes newproductleft {
+	0% {
+		transform: translateX(100%) translateY(-50%);
+	}
+	50%{
+		transform: translateX(-8%) translateY(-50%);
+	}
+	65%{
+		transform: translateX(4%) translateY(-50%);
+	}
+	80%{
+		transform: translateX(-4%) translateY(-50%);
+	}
+	95%{
+		transform: translateX(2%) translateY(-50%);
+	}			
+	100% {
+		transform: translateX(0%) translateY(-50%);
+	}
 }
-
 .newproduct-box h2 {
   font-weight: 700;
   font-size: 48px;
@@ -1494,6 +1574,7 @@ body {
     transform: translate(-50%, -50%);
     display: block;
     width: 100%;
+    animation: none;
   }
 
   .inves .inner h2 {
@@ -1550,6 +1631,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
+    animation: none;
   }
 
   .newproduct-box h2 {
@@ -1691,8 +1773,8 @@ body {
 
 .sw-job-prev {
   position: absolute;
-  left: 8%;
-  top: 44%;
+  left: 2vw;
+  top: 26.4vw;
   display: none;
   width: 4vw;
   height: 8vw;
@@ -1706,8 +1788,8 @@ body {
 
 .sw-job-next {
   position: absolute;
-  right: 8%;
-  top: 45%;
+  right: 5vw;
+  top: 26.4vw;
   display: none;
   width: 4vw;
   height: 8vw;
@@ -1772,7 +1854,7 @@ body {
 
 @media all and (max-width:1000px) {
   .job {
-    height: 100vw;
+    height: 120vw;
     background: url('../images/job-bg-m.jpg') no-repeat center;
     background-size: cover;
     overflow: hidden;
@@ -1811,8 +1893,8 @@ body {
     width: 650px;
     height: 650px;
     float: none;
-    margin-top: 130px;
-    margin-left: 50px;
+    margin-top: 18.15vw;
+    margin-left: 3.9vw;
 
 
   }
@@ -1824,17 +1906,14 @@ body {
   }
 
   .job-box {
-
-    width: 97%;
-    height: 100%;
-
+    width: 64vw;
+    height: 65vw;
     border-radius: 50%;
-
-    margin-left: 15px;
+    margin-left: 0;
     opacity: 0.8;
     outline: none;
     transition: all 0.5s;
-    padding: 40px 0;
+    /* padding: 40px 0; */
   }
 
   .job-right-title {
@@ -1855,7 +1934,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     font-weight: 300;
-    line-height: 40px;
+    line-height: 3.12vw;
 
   }
 
@@ -1876,7 +1955,67 @@ body {
     display: block;
   }
 }
-
+@media all and (max-width:960px){
+  .sw-job-next {
+    right: 6vw;
+    
+  }
+}
+@media all and (max-width:930px){
+  .sw-job-next {
+    right: 10vw;
+  }
+}
+@media all and (max-width:900px){
+  .sw-job-next {
+    right: 12vw;
+  }
+}
+@media all and (max-width:850px){
+  .sw-job-next {
+    right: 14vw;
+  }
+}
+@media all and (max-width:820px){
+  .sw-job-next {
+    right: 18vw;
+  }
+}
+@media all and (max-width:790px){
+  .sw-job-next {
+    right: 22vw;
+  }
+}
+@media all and (max-width:750px){
+  .sw-job-next {
+    right: 28vw;
+  }
+}
+@media all and (max-width:700px){
+  .sw-job-next {
+    right: 34vw;
+  }
+}
+@media all and (max-width:660px){
+  .sw-job-next {
+    right: 40vw;
+  }
+}
+@media all and (max-width:600px){
+  .sw-job-next {
+    right: 48vw;
+  }
+}
+@media all and (max-width:570px){
+  .sw-job-next {
+    right: 58vw;
+  }
+}
+@media all and (max-width:530px){
+  .sw-job-next {
+    right: 68vw;
+  }
+}
 /* 하단영역 */
 .footer {
   position: relative;
