--- a/css/main.css
+++ b/css/main.css
@@ -514,9 +514,7 @@ body {
   background: url('../images/lang_arrow.png') no-repeat center;
 }
 
-.lang-box-ch::after {
-  background: url('../images/lang_arrow_sticky.png') no-repeat center;
-}
+
 
 .lang-box-ch-click::after {
   background: url('../images/lang_arrow_sticky.png') no-repeat center;
@@ -528,7 +526,9 @@ body {
   background: url('../images/lang_arrow.png') no-repeat center;
   transform: rotate(180deg);
 }
-
+.lang-box-ch::after {
+  background: url('../images/lang_arrow_sticky.png') no-repeat center;
+}
 .lang-box-list {
   position: absolute;
   left: -1px;
@@ -1673,12 +1673,11 @@ body {
 }
 
 .job-left {
-  position: relative;
+  position: absolute;
   display: block;
-  float: left;
+  top: 200px;
+  left: 70px;
   width: 240px;
-  margin-top: 200px;
-  margin-left: 70px;
 }
 
 .job-left h2 {
@@ -1707,8 +1706,7 @@ body {
 .sw-job {
   position: relative;
   display: block;
-
-  float: left;
+  float: right;
   margin-top: 130px;
   margin-left: 50px;
   text-align: center;
@@ -1716,11 +1714,9 @@ body {
 }
 
 .sw-job .swiper-slide {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
-  flex-shrink: 1;
+  width: calc(100% / 3);
+  float: left;
+
 }
 
 .job-box {
@@ -1735,7 +1731,6 @@ body {
   margin-left: 15px;
   opacity: 0.8;
   outline: none;
-  transition: all 0.5s;
   padding: 40px 0;
 }
 
@@ -1770,7 +1765,14 @@ body {
   background: transparent;
   cursor: pointer;
 }
-
+.swiper-job-control{
+  position: absolute;
+  top: 120px;
+  left: 1.6vw;
+  display: none;
+  width: 62.6vw;
+  height: 100%;
+}
 .sw-job-prev {
   position: absolute;
   left: 2vw;
@@ -1867,10 +1869,10 @@ body {
   }
 
   .job-left {
-    float: none;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100px;
     width: 100%;
-    margin: 0 auto;
-    padding-top: 100px;
   }
 
   .job-left h2 {
@@ -1902,7 +1904,7 @@ body {
   .sw-job .swiper-slide {
     width: 100%;
     height: 100%;
-    flex-shrink: 0;
+    float: none;
   }
 
   .job-box {
@@ -1910,9 +1912,9 @@ body {
     height: 65vw;
     border-radius: 50%;
     margin-left: 0;
+    margin-top: 110px;
     opacity: 0.8;
     outline: none;
-    transition: all 0.5s;
     /* padding: 40px 0; */
   }
 
@@ -1946,74 +1948,16 @@ body {
     width: auto;
     border-radius: 5vw;
   }
-
+  
+  .swiper-job-control{
+    display: block;
+  }
   .sw-job-prev {
     display: block;
   }
 
   .sw-job-next {
     display: block;
-  }
-}
-@media all and (max-width:960px){
-  .sw-job-next {
-    right: 6vw;
-    
-  }
-}
-@media all and (max-width:930px){
-  .sw-job-next {
-    right: 10vw;
-  }
-}
-@media all and (max-width:900px){
-  .sw-job-next {
-    right: 12vw;
-  }
-}
-@media all and (max-width:850px){
-  .sw-job-next {
-    right: 14vw;
-  }
-}
-@media all and (max-width:820px){
-  .sw-job-next {
-    right: 18vw;
-  }
-}
-@media all and (max-width:790px){
-  .sw-job-next {
-    right: 22vw;
-  }
-}
-@media all and (max-width:750px){
-  .sw-job-next {
-    right: 28vw;
-  }
-}
-@media all and (max-width:700px){
-  .sw-job-next {
-    right: 34vw;
-  }
-}
-@media all and (max-width:660px){
-  .sw-job-next {
-    right: 40vw;
-  }
-}
-@media all and (max-width:600px){
-  .sw-job-next {
-    right: 48vw;
-  }
-}
-@media all and (max-width:570px){
-  .sw-job-next {
-    right: 58vw;
-  }
-}
-@media all and (max-width:530px){
-  .sw-job-next {
-    right: 68vw;
   }
 }
 /* 하단영역 */
