--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ body {
   position: fixed;
   left: 0;
   top: 0;
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
@@ -56,7 +56,7 @@ body {
   transform: translate(-50%, -50%);
   width: 550px;
   height: 400px;
-  background-color: #ddd;
+  background: #ddd;
   border-radius: 20px;
   padding: 10px;
   box-shadow: 0px 0px 7px 0px rgba(0 0 0 / 70%);
